--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ python:
   - "3.6"
 
 install:
-  - travis_wait pip install .
+  # - travis_wait pip install .
+  - pip install .[test]
 
-script: py.test
+script: pytest tests/
+
+notifications:
+  email: false
