--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,6 @@ name: PyGammaAgreement
 dependencies:
   - python>=3.6
   - cython>=0.20.1
-  - h5features>=1.3
-  - h5py>=2.3.0
   - numpy>=1.10.4
   - numpydoc
   - mock
@@ -14,4 +12,9 @@ dependencies:
   - scipy>=1.1
   - setuptools
   - sphinx_rtd_theme
-  - pyannote-core >=3.0
+  - pip
+  - pip:
+    - h5features>=1.3
+    - h5py>=2.3.0
+    - pyannote-core >=3.0
+    - jupyter
