--- a/environment.yml
+++ b/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - pip:
     - h5features>=1.3
     - h5py>=2.3.0
-    - pyannote-core>=0.3.0
+    - pyannote.core>=0.3
     - jupyter
     - cvxpy
     - strsim==0.0.3
