--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ simplejson >= 3.8.1
 matplotlib >= 2.0.0
 pyannote.core>=0.3
 cvxpy == 1.0.25
-strsim == 0.0.3
 tqdm >= 4.46.0
 numba == 0.48
+typing_extensions >= 3.7.4.3
