--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 sortedcontainers>= 2.0.4
 numpy>= 1.10.4
 scipy>= 1.1
-pandas>= 0.17.1
-simplejson>= 3.8.1
 matplotlib>= 2.0.0
 pyannote.core>=0.3
 cvxpy== 1.0.25
@@ -10,3 +8,4 @@ tqdm>= 4.46.0
 numba== 0.48.0
 typing_extensions>= 3.7.4.3
 TextGrid==1.5
+pyannote.database >= 4.0.1
