--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ matplotlib>= 2.0.0
 pyannote.core>=4.1
 cvxpy== 1.0.25
 tqdm>= 4.46.0
-numba== 0.48.0
+numba>= 0.48.0
 typing_extensions>= 3.7.4.3
-TextGrid==1.5
+TextGrid>=1.5
 pyannote.database >= 4.0.1
 dataclasses >= 0.7; python_version <'3.7'
