--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ sudo: false
 language: python
 
 python:
-  - "3.6"
+  - "3.7"
+  - "3.8"
+  - "3.9"
 
 install:
   - pip install --upgrade pip
-  - pip install .[test]
+  - pip install .[testing]
 
 script:
     - pytest tests/
