--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
   - pip install --upgrade pip
   - pip install .[testing]
 # CBC dependancies
-  - sudo apt install coinor-libcbc-dev
+  - sudo apt-get update
+  - sudo apt-get -y install coinor-libcbc-dev
   - pip install cylp
 
 script:
