--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,18 @@ sudo: false
 language: python
 
 python:
+  - "3.6"
   - "3.7"
   - "3.8"
   - "3.9"
 
+before_install:
+# CBC dependency
+  - sudo apt-get update
+  - sudo apt-get -y install coinor-libcbc-dev
 install:
   - pip install --upgrade pip
   - pip install .[testing]
-# CBC dependancies
-  - sudo apt-get update
-  - sudo apt-get -y install coinor-libcbc-dev
   - pip install cylp
 
 script:
