--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,6 +32,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install coinor-libcbc-dev
         pip install cylp
+        pip install python-Levenshtein
     - name: Test with pytest
       run: |
         pytest tests/
