--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -26,10 +26,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         sudo apt-get update
         sudo apt-get -y install coinor-libcbc-dev
-        pip install cylp
+        pip install .[testing]
     - name: Test with pytest
       run: |
         pytest tests/
