--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -28,6 +28,7 @@ jobs:
         python -m pip install flake8 pytest
         sudo apt-get update
         sudo apt-get -y install coinor-libcbc-dev
+        pip install .
         pip install .[testing]
     - name: Test with pytest
       run: |
